adding remove htop

--- a/roles/okd/tasks/main.yaml
+++ b/roles/okd/tasks/main.yaml
@@ -36,7 +36,12 @@
   command: yum downgrade ansible -y
   tags: package
 
-# Example removing a repository and cleaning up metadata cache
+- name: Remove htop if present
+  package:
+    name: htop
+    state: absent
+  tags: package
+
 - name: Remove repository (and clean up left-over metadata)
   yum_repository:
     name: epel
